fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -77,3 +77,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #ffffff;
+    background-color: #213547;
+  }
+  button {
+    background-color: #ec3e3e;
+  }
+}
